--- a/requirements.txt
+++ b/requirements.txt
@@ -206,7 +206,7 @@ pypika==0.48.9
 pyproject-hooks==1.2.0
 pyright==1.1.402
 pysbd==0.3.4
-pysqlite3==0.5.4
+pysqlite3-binary==0.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==3.3.0
